# -TERMINAL-GAME-Dino

./: CMakeLists.txt  Dino  README.md
assets/: sprite.txt
src/: ansi_renderer.cpp  bird.cpp  cactus.cpp  color.cpp  cursor_input.cpp  dinosaur.cpp  game.cpp  ground.cpp  main.cpp
src/headers/: ansi_renderer.hpp  bird.hpp  cactus.hpp  color.hpp  cursor_input.hpp  dinosaur.hpp  game.hpp  ground.hpp  utils.hpp
